fix for ie10 div z-index

--- a/src/scss/screen/_characters.scss
+++ b/src/scss/screen/_characters.scss
@@ -107,6 +107,7 @@
     top: 500px;
     // width: 80px;
     // height: 80px;
+    z-index: 100; //fix for ie10
     @include transform-style(preserve-3d);
     @include transform(translateZ(155px));
 
