--- a/src/scss/screen/_sections.scss
+++ b/src/scss/screen/_sections.scss
@@ -21,6 +21,7 @@ article{
     line-height: 24px;
     color: #333;
     z-index: 150;
+    border-radius: 3px;
     
     h3{
         color: #999;
